# tinyamp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  tinyamp.c  tinyamp.cpp  tinyamp.lst.save  tinyamp.lst1  tinyamp.lst_beforereworki2s
docs/: hmi.md
include/: i2c.h  interrupt_vectors.h  interrupts.h  mcal_reg.h  tinyamp.h  usart_dbg.h
src/: i2c.c  i2c.cpp  tmp.txt
src/utils/usart_dbg/: usart_dbg.cpp
